# geo-downloader

./: .gitignore  README.md  package-lock.json  package.json  release-notes-v3.4.0-beta.2.md  release-notes-v3.4.3.md  release-notes-v3.4.4.md  release-notes-v3.4.5.md
.github/: copilot-instructions.md
.github/workflows/: deploy-mirror.yml  qr-admin.yml  release.yml
.windsurf/rules/: memory.md
docs/: 3dtiles-design.md  browse-as-cache-design.md  exporter-oom-fix-design.md  frontend-react-vite-shadcn-refactor-plan.md  partial-export-design.md  promotion.md  tauri-version-changelog.md
docs/design/: cache-directory-migration-design.md
docs/knowledge-base/: 01-产品概述.txt  02-数据源列表.txt  03-使用指南.txt  04-常见问题FAQ.txt  05-设置项说明.txt  06-版本更新记录.txt  07-技术架构.txt  08-社区与联系.txt
docs/release-notes/: release-notes-v3.5.0.md  release-notes-v3.5.3.md  release-notes-v3.6.0.md  release-notes-v3.6.1.md  release-notes-v3.6.3.md
docs/samples/: test-boundary.kml  test-boundary.kmz
docs/worklog/: 2026-04-18-shadcn-newyork-migration.md  2026-04-22-dem-implementation-notes.md  2026-04-25-wayback-3-4-beta-and-update-check.md  2026-04-29-react-migration-progress.md  2026-05-05-kml-kmz-import.md  2026-05-06-cache-wal-and-wayback-proxy.md  2026-05-08-browse-as-cache.md  2026-05-08-full-codebase-bug-scan.md  2026-05-08-mbtiles-mvt-and-dem-info.md  2026-05-29-issue-list.md  2026-05-29-settings-format-empty-investigation.md  2026-06-30-polygon-crop-black-border-fix.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/layout/: app-shell.tsx  panel-section.tsx  stat-card.tsx
frontend/src/components/theme/: theme-provider.tsx  theme-switcher.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  (+7 more)
frontend/src/lib/: cesium-loader.ts  geo-import.ts  query-client.ts  tauri.ts  use-cached-image.ts
frontend/src/store/: app-store.ts  batch-store.ts  imagery-params-store.ts  persist-storage.ts  selection-store.ts  vector-layers-store.ts  wayback-store.ts
frontend/src/types/: api.ts  shpjs.d.ts
memories/: README.md  _rules.md  geo-downloader.md
scripts/: qr-upload-server.js  restart-qr-admin.ps1
site/: disclaimer.html  history.html  index.html  redesign.css  robots.txt  site-shell.css  site-shell.js  sitemap.xml  subpage.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.react.conf.json
src-tauri/capabilities/: default.json
src-tauri/design-system/tif-downloader/: MASTER.md
src-tauri/src/: admin.rs  budget.rs  cache_migration.rs  commands.rs  config.rs  downloader.rs  exporter.rs  fs_util.rs  history.rs  lib.rs  merger.rs  pyramid.rs  settings.rs  streaming_raster.rs  streaming_tiff.rs  task.rs  tile.rs  tile_pack.rs  wayback.rs  wayback_metadata.rs
src-tauri/src/tile_cache/: mod.rs  pool.rs  store.rs
src-tauri/src/tiles3d/: fetcher.rs  filter.rs  mod.rs  tileset.rs
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  batch-download.js
(+49 files in other folders)
